@@ -20,7 +20,7 @@ describe("when the token endpoint is invoked", function()
     assert_token_endpoint_call_contains("state=" .. state)
   end)
   it("the request contains the redirect uri", function()
-    local redir_escaped = test_support.urlescape_for_regex("http://127.0.0.1/default/redirect_uri")
+    local redir_escaped = test_support.urlescape_for_regex("http://localhost/default/redirect_uri")
     assert_token_endpoint_call_contains("redirect_uri=" .. redir_escaped, true)
   end)
   it("the request contains the client_id parameter", function()
